<resources>
    <string name="app_name">МИРСУ УС</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Главная</string>
    <string name="title_lit">Литература</string>
    <string name="title_portfel">Твой портфель</string>
    <string name="title_net">АСУУС</string>
    <string name="title_settings">Настройки</string>
    <string name="inf_btn">ИНФОРМАЦИОННЫЙ БЛОК</string>
    <string name="calc_btn">РАССЧЁТНЫЙ БЛОК</string>
    <string name="manage_btn">БЛОК УПРАВЛЕНИЯ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Дом" />
    <string name="Портфель" />
    <string name="settings">Настройки</string>
    <string name="title_activity_calculation">CalculationActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_points">PointsActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_appp">MainActivity</string>
    <string name="title_zhivuchest">Введите количество элементов, входящих в состав УС(ПУ)</string>
    <string name="input_hint">Введите число</string>
    <string name="element_1">Элемент № 1</string>
    <string name="target_area">Площадь цели</string>
    <string name="count_opened_tracks">Количество вскрытых противником аппаратных</string>
    <string name="all_tracks">Общее количество апаратных</string>
    <string name="effciency_koef">Эффективность   действия группировки ПВО</string>
    <string name="eficiency_koef_rub">Эффективность действия группиовки РЭБ</string>
    <string name="add">Рассчитать  </string>
    <string name="previous">Предыдущий </string>
    <string name="max_area">Максимальная площадь поражения боеприпасами</string>
    <string name="zhivuchest_string">Живучесть элемента №</string>
    <string name="razved_calcuate">Расчёт разведзащищенности узла связи (пункта управления)</string>
    <string name="input">ВХОД</string>
    <string name="zhivuchest_calculate">Расчёт живучести узла связи (пункта управления)</string>
    <string name="razvetvania_calculate">Расчёт времени на развертывание много интервальной радиорелейной линии связи</string>
    <string name="time_calculate">Расчёт времени выполнения задач узлом связи(выполнение требований по стабильности узла связи)</string>
    <string name="temperature">Температура</string>
    <string-array name="ground">
        <item>Равнинная и средне пересеченная</item>
        <item>Лесисто-болотистая (Район Крайнего Севера) </item>
        <item>Пустынно-песчаная</item>
        <item>Гористая (грунт 4 категории)</item>
    </string-array>
    <string name="count_radio_stations">Количество радиорелейных станций</string>
    <string-array name="type_chanel">
        <item>ТГ</item>
        <item>ТЧ</item>
        <item>Цифровой поток(канал)</item>
    </string-array>
    <string name="type_line">Тип линий</string>
    <string name="snow">Снег</string>
    <string name="wind">Ветер</string>
    <string name="time_marsh">Тмарша (мин)</string>
    <string name="time_razvertyvania">Тразв</string>
    <string name="calculate">Рассчитать</string>
    <string name="elements">Элемент №</string>
    <string name="reconisanse_title">Количество вскрытых противником элементов(модулей) в составе УС(ПУ)</string>
    <string name="result_razvedka">Разведзащищенность элемента №</string>
    <string name="_1">1</string>
    <string name="change_value">Перерасчёт</string>
    <string name="compass">Компас</string>
    <string-array name="type_of_lines">
        <item>Р-409, Р-419Л1, Р-419МП</item>
        <item>Р-416ГМ</item>
        <item>Р-431АМ</item>
        <item>Р-423АМ</item>
    </string-array>
    <string-array name="stations">
        <item>Передающий узел Р-161У на антенны: две V-образные (70 мин.)</item>
        <item>Приемный узел Р-161ПУ на антенны: всех типов (90 мин.)</item>
        <item>Радиостанция Р-166 на две мачты (72 мин.)</item>
        <item>Передающая часть радиостанции Р–161–5 на антенны: двойной вертикальный ромб (145 мин.)</item>
        <item>Приемная часть радиостанции Р–161–5 на антенны: все типы антенн (105 мин.)</item>
        <item>Тропосферная станция Р-423АМ (35 мин.)</item>
        <item>Радиорелейная станция Р-416ГМ (85 мин.)</item>
        <item>Радиорелейная станция Р-431АМ (антенный модуль) (47 мин.)</item>

        <item>Радиорелейная станция Р-419Л1 на два полукомплекта (30 мин.)</item>
        <item>Станция спутниковой связи Р-441-Л на выносную антенну (40 мин.)</item>
        <item>Комплексная аппаратная П-260-Т (70 мин.)</item>
        <item>Комплексная аппаратная П-260-О (75 мин.)</item>
        <item>Комплексная аппаратная П-260-У (80 мин.)</item>
        <item>Аппаратная П-266 (45 мин.)</item>
        <item>Станция спутниковой связи Р-441-УВ (Р-441-У, Р-440-У) (110 мин.)</item>
        <item>Аппаратная ШАС П-244И(П-244И-4) (80 мин.)</item>

        <item>Аппаратная ШАС П-238ТК(П-238ТК1) (55 мин.)</item>
        <item>Аппаратная ШАС К-8М (50 мин.)</item>
        <item>Аппаратная КАС П-240И(П240И4) (70 мин.)</item>
        <item>83Т588 (МК ЗВКС) (25 мин.))</item>
        <item>Аппаратная ФПС П-391П1М (П-391ПМ) (25 мин.)</item>
        <item>Аппаратная ФПС П-392ПМ (23 мин.)</item>
        <item>Передающий узел Р-176У на антенны: две V-образные (80 мин.)</item>
        <item>Приемный узел Р-176ПУ на антенны: всех типов (100 мин.)</item>

        <item>Радиостанция Р-176 -1А на две мачты (80 мин.)</item>
        <item>Передающая часть радиостанции Р–171–5 на антенны двойной вертикальный ромб (160 мин.)</item>
        <item>Приемная часть радиостанции Р–171–5 на антенны: все типы антенн (115 мин.)</item>
        <item>П-243Т (МТК) (60 мин.)</item>
        <item>Аппаратная 83Т212 (54 мин.)</item>
        <item>Аппаратная 83Т104 (40 мин)</item>
        <item>Аппаратная П-261 (30 мин.)</item>
        <item>Электропитающая станция ЭД 2х30 (35 мин.)</item>

    </string-array>
    <string-array name="time_for_stations">
        <item>70</item>
        <item>90 </item>
        <item>72</item>
        <item>145</item>
        <item>105</item>
        <item>35</item>
        <item>85</item>
        <item>47</item>

        <item>30</item>
        <item>40</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>45</item>
        <item>110</item>
        <item>80</item>

        <item>55</item>
        <item>50</item>
        <item>70</item>
        <item>25</item>
        <item>25</item>
        <item>23</item>
        <item>80</item>
        <item>100</item>

        <item>80</item>
        <item>160)</item>
        <item>115</item>
        <item>60</item>
        <item>54</item>
        <item>40</item>
        <item>30</item>
        <item>35</item>

    </string-array>
    <string name="sotw_north">N</string>
    <string name="sotw_east">E</string>
    <string name="sotw_south">S</string>
    <string name="sotw_west">W</string>
    <string name="sotw_northeast">NE</string>
    <string name="sotw_northwest">NW</string>
    <string name="sotw_southeast">SE</string>
    <string name="sotw_southwest">SW</string>
    <string name="action_settings">Settings</string>
    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>
    <string name="result_razvertyvania">Время на развертывание</string>
    <string name="title_activity_main_information">MainInformationActivity</string>
    <string name="inf_block">Информационный блок</string>
    <string name="calc_button">Рассчётный блок</string>
    <string name="web_button">Сеть</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="signIn">Вход в систему</string>
    <string name="input_name">Имя</string>
    <string name="password">Пароль</string>
    <string name="inputPassword">Введите пароль</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="inputName">Введите имя</string>
    <string name="registration">Регистрация</string>
    <string name="new_user_btn">Зарегистрироваться</string>
    <string name="signUp">Уже зарегистрированы?</string>
    <string name="enter">Войти</string>
    <string name="input_surname">Введите фамилию</string>
    <string name="input_patronymic">Введите отчество</string>
    <string name="rank">Звание</string>
    <string name="appointment"> Должность</string>
    <string name="workPlace">Узел связи</string>
    <string name="inputRank">Ваше звание</string>
    <string name="input_appointment">Ваша должность</string>
    <string name="input_workPlace">Узел связи, на котором вы работаете</string>
    <string name="changePersonalData">Изменить данные профиля</string>
    <string name="title_activity_change_personal_data">ChangePersonalData</string>
    <string name="surnameText">Фамилия</string>
    <string name="patronymicText">Отчество</string>
    <string name="saveChanges">Сохранить изменения</string>
    <string name="literature_list1"> 1. Аппаратная П-260-О. Руководство по эксплуатации. Часть 1. Общие сведения.</string>
    <string name="literature_list2"> 2. Аппаратная П-260-Т. Руководство по эксплуатации. Часть 1. Общие сведения.</string>
    <string name="literature_list3">  3. Аппаратная П-260-У. Руководство по эксплуатации. Часть 1. Общие сведения.</string>
    <string name="literature_list4">  5. Основы построения и эксплуатации полевых узлов связи ПУ объеди-нений. Альбом схем. – СПб.: ВАС. 2013.</string>
    <string name="literature_list5"> 6. Основы построения и эксплуатации узлов связи пунктов управления объединений. Курс лекций. – СПб.: ВАС. 2013.</string>
    <string name="literature_list6"> 7. Проект оперативно-тактических требований к полевым подвижным пунктам управления модульного типа. – М.: ВАГШ, 2010.</string>
    <string name="literature_list7"> 8. Руководство по боевому применению комплекса аппаратных связи «Редут-2УС» (проект). – М.: 16 ЦНИИС, 2013.</string>
    <string name="literature_list8">  9. Руководство по эксплуатации аппаратных П-260-У, П-260-О, П-260-Т. – М.: НИИССУ, 2013.</string>
    <string name="literature_list9">  10. Цифровая радиорелейная станция Р-416ГМ. Руководство по экс-плуатации радиорелейного оборудования.</string>
    <string name="literature_list10"> 11. Системы радиосвязи специального назначения. Радиостанции ма–лой мощности. В двух книгах. Книга 1. Радиостанции Р–168-100КА и Р-168-25У-2. С. В. Дворников, Д. А. Кузнецов, Ю. Н. Лысенков, А. А. Пого-релов, П. Г. Романенко. – СПб.: ВАС, 2014. – 68 с.</string>
    <string name="literature_list11"> 12. Литкевич Г. Ю., Кочетков А. О., Чернышов А. Г. Командно-штабная машина Р-149АКШ-1. – СПб.: ВАС, 2015. – 187 с.</string>
    <string name="literature_list12"> 13. Системы радиосвязи специального назначения. Радиостанции сред-ней мощности. Книга 1. Радиостанции из состава комплекса технических средств радиосвязи «Поиск-М». П. Г. Романенко, Д. А. Кузнецов, С. В. Дворников, А. А. Погорелов. – СПб.: ВАС, 2014. – 128 с.</string>
    <string name="literature_list13"> 14. Системы радиосвязи специального назначения. Радиостанции сред-ней мощности. Книга 2. Радиостанция Р-166. П. Г. Романенко, Д. А. Кузне-цов, А. М. Спирин, Е. Н. Штрекер, Д. Ю. Риконен. – СПб.: ВАС, 2016. – 107 с.</string>
    <string name="subscriber_network_calculate">Расчёт абонентской сети на пункте управления</string>
    <string name="title_scanner">Сканнер</string>
</resources>