<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sectionFragment"
        android:icon="@drawable/icon_book"
        android:title="Справочник" />

    <item
        android:id="@+id/calculation_nav_fragment"
        android:icon="@drawable/navigation_calculate"
        android:title="Расчёты" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_net"
        android:icon="@drawable/icon_computer"
        android:title="@string/title_net" />

    <item
        android:id="@+id/qrActivity"
        android:icon="@drawable/icon_code_scanner"
        android:title="@string/title_scanner" />


</menu>
