<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_navigation.calculation.List_Calculations_Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/reconnaissance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"


            android:padding="16dp"
            android:text="@string/razved_calcuate"

            android:textColor="@color/white"
            app:cornerRadius="16dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/zhivuchest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:padding="16dp"

            android:text="@string/zhivuchest_calculate"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="@+id/reconnaissance"
            app:layout_constraintStart_toStartOf="@+id/reconnaissance"
            app:layout_constraintTop_toBottomOf="@+id/reconnaissance" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vremya_Razvertyvaniya_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:textSize="15sp"
            android:text="@string/razvetvania_calculate"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="@+id/zhivuchest"
            app:layout_constraintStart_toStartOf="@+id/zhivuchest"
            app:layout_constraintTop_toBottomOf="@+id/zhivuchest" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subscriber_network"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:text="@string/subscriber_network_calculate"
            android:textSize="15sp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="@+id/vremya_Razvertyvaniya_btn"
            app:layout_constraintStart_toStartOf="@+id/vremya_Razvertyvaniya_btn"
            app:layout_constraintTop_toBottomOf="@+id/vremya_Razvertyvaniya_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>